# PowerKey

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/net/alex/powerkey/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PasswordChars.h  powerkey.cpp  powerkey.h
app/src/main/java/net/alex/powerkey/: ActivityMainBinding.kt  MainActivity.kt
app/src/main/java/net/alex/powerkey/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  password_svgrepo_com.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-es-rMX/: strings.xml
app/src/test/java/net/alex/powerkey/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
